--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -101,18 +101,18 @@
             <div class="medium-6 large-6 columns">
                <ul class="clearing-thumbs small-block-grid-3 medium-block-grid-3 large-block-grid-3" data-clearing>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria-panorama.jpg" class="th">
-                            <img data-caption="Un panorma mozzafiato" src="http://beerstrot.it/asset/img/thumbs/aia-beerstrot-th.jpg" alt="BUn panorma mozzafiato">
+                        <a href="http://beerstrot.it/asset/img/large/aia-beerstrot.jpg" class="th">
+                            <img data-caption="Aia e rosmarino" src="http://beerstrot.it/asset/img/thumbs/aia-beerstrot-th.jpg" alt="Aia e rosmarino">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria.jpg" class="th">
-                            <img data-caption="Birreria"  src="http://beerstrot.it/asset/img/thumbs/birreria-th.jpg" alt="">
+                        <a href="http://beerstrot.it/asset/img/large/vialetto-e-erba.jpg" class="th">
+                            <img data-caption="Vialetto d'ingresso"  src="http://beerstrot.it/asset/img/thumbs/vialetto-e-erba-th.jpg" alt="Vialetto Entrata e Erba">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria-panorama.jpg" class="th">
-                            <img data-caption="Un panorma mozzafiato" src="http://beerstrot.it/asset/img/thumbs/birreria-panorama-th.jpg" alt="BUn panorma mozzafiato">
+                        <a href="http://beerstrot.it/asset/img/large/vialetto-beerstrot.jpg" class="th">
+                            <img data-caption="Vialetto d'ingresso" src="http://beerstrot.it/asset/img/thumbs/vialetto-beerstrot-th.jpg" alt="Vialetto Entrata">
                         </a>
                     </li>
                     <li>
