--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -111,18 +111,18 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/vialetto-beerstrot.jpg" class="th">
-                            <img data-caption="Vialetto d'ingresso" src="http://beerstrot.it/asset/img/thumbs/vialetto-beerstrot-th.jpg" alt="Vialetto Entrata">
+                        <a href="http://beerstrot.it/asset/img/large/tavolo-dettaglio-beerstrot.jpg" class="th">
+                            <img data-caption="Tavola dettaglio" src="http://beerstrot.it/asset/img/thumbs/tavolo-dettaglio-beerstrot-th.jpg" alt="Tavola Dettaglio">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria.jpg" class="th">
-                            <img data-caption="Birreria"  src="http://beerstrot.it/asset/img/thumbs/birreria-th.jpg" alt="">
+                        <a href="http://beerstrot.it/asset/img/large/tavoli.jpg" class="th">
+                            <img data-caption="Tavoli apparecchiati"  src="http://beerstrot.it/asset/img/thumbs/tavoli-th.jpg" alt="">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria-panorama.jpg" class="th">
-                            <img data-caption="Un panorma mozzafiato" src="http://beerstrot.it/asset/img/thumbs/birreria-panorama-th.jpg" alt="BUn panorma mozzafiato">
+                        <a href="http://beerstrot.it/asset/img/large/tavolo-dettaglio-beerstrot.jpg" class="th">
+                            <img data-caption="Un locale bellisssimo" src="http://beerstrot.it/asset/img/thumbs/tavolo-dettaglio-beerstrot-th.jpg" alt="Tavolo Dettaglio">
                         </a>
                     </li>
                     <li>
