--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -111,8 +111,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/tavolo-dettaglio-beerstrot.jpg" class="th">
-                            <img data-caption="Tavola dettaglio" src="http://beerstrot.it/asset/img/thumbs/tavolo-dettaglio-beerstrot-th.jpg" alt="Tavola Dettaglio">
+                        <a href="http://beerstrot.it/asset/img/large/quattro-birre-artigianali-americane.jpg" class="th">
+                            <img data-caption="Tavola dettaglio" src="http://beerstrot.it/asset/img/thumbs/quattro-birre-artigianali-americane-th.jpg" alt="Tavola Dettaglio">
                         </a>
                     </li>
                     <li>
@@ -126,13 +126,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria.jpg" class="th">
-                            <img data-caption="Birreria"  src="http://beerstrot.it/asset/img/thumbs/birreria-th.jpg" alt="">
+                        <a href="http://beerstrot.it/asset/img/large/tavalo-apparecchiata-dettaglio-posate.jpg" class="th">
+                            <img data-caption="Tavoli apparecchiati"  src="http://beerstrot.it/asset/img/thumbs/tavalo-apparecchiata-dettaglio-posate-th.jpg" alt="Tavoli apparecchiati">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria-panorama.jpg" class="th">
-                            <img data-caption="Un panorma mozzafiato" src="http://beerstrot.it/asset/img/thumbs/birreria-panorama-th.jpg" alt="BUn panorma mozzafiato">
+                        <a href="http://beerstrot.it/asset/img/large/panorama-da-porta-finestra.jpg" class="th">
+                            <img data-caption="Un panorma mozzafiato" src="http://beerstrot.it/asset/img/thumbs/panorama-da-porta-finestra-th.jpg" alt="Panorama da Porta Finestra">
                         </a>
                     </li>
                     <li>
