--- a/index-wide.html
+++ b/index-wide.html
@@ -3,12 +3,13 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Team | Andrea Tagliazucchi</title>
-    <meta name="description" content="Fondatore di Beerstrot e barista in charge"/>
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <link rel="canonical" href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
+    <title>Beerstrot | Birra Artigianale e Cibo Divino</title>
+    <meta name="description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
+    <meta name="copyright" content="Beerstrot Copyright (c) 2015"/>
+    <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
+    <link rel="canonical" href="http://beerstrot.it"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -41,35 +42,116 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio header -->
-    <header>
-        <div id="image-background-team">
-            <img class="image-hero" src="http://beerstrot.it/asset/img/large/andrea-tagliazucchi-background.jpg" alt="Andrea Tagliazucchi" />
-             <img class="user-image" src="http://beerstrot.it/asset/img/thumbs/andrea-tagliazucchi-th.jpg" alt="Andrea Tagliazucchi">
+    <header class="panel-home">
+        <div class="row" itemscope itemtype="http://schema.org/Restaurant">
+            <div class="medium-6 large-6 columns" >
+                <h1 class="text-center" itemprop="description">Per chi, come noi, ama la birra artigianale e il buon cibo</h1>
+            </div>
+            <div class="small-centerd small-12  medium-6 large-6 columns">
+                <img src="http://beerstrot.it/asset/img/medium/birreria.jpg" alt="Birreria">
+            </div>  
         </div>
-        <div class="row">
-            <div class="medium-10 large-9 columns extra-space">
-                <h1>Andrea Tagliazucchi</h1>
-                <p class="by-line">Fondatore di Beerstrot e barista in charge</p>
-                <blockquote>
-                    <p>Scrivo di birra e mi piace berla di brutto, ma solo birra artigianale. <br> Tutte le foto sono fatte con un iphone e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
-                    <cite>Andrea</cite>
-                    </p>
-                </blockquote>
+        <div class="row show-for-small-only extra-space">
+            <div class="small-12 columns clearfix">
+                <a role="button" href="tel:+393385071940" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
+                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Indirizzo</a>
             </div>
         </div>
     </header>
 <!-- fine header -->
-<!-- inizio navigazione nota: ha extra space -->
-    <div class="row">
-        <div class="medium-12 large-12 columns extra-space">
-            <div class="clearfix">
-                <a href="http://beerstrot.it/chi-siamo/" class="left">&larr; Tutto il team</a>
+    <div class="panel-home-n">
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <h1>Menù</h1>
             </div>
-        </div> 
+        </div>
+        <div class="row">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/menu/"><img src="http://beerstrot.it/asset/img/medium/tris-mini-hamburger.jpg" alt="Hamburger" class="extra-space-image-tab-home"></a>
+            </div>
+            <div itemscope itemtype="http://schema.org/Restaurant" class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+                <p>Birra artigianale e cibo di altissima qualità. Facciamo gli hamburger più buoni al mondo utilizzando solo carni da animali al pascolo e verdure fresche di stagione.</p>
+                <p>Cibi preparati con cura maniacale: dalle materie prime, alla preparazione, alla presentazione.</p>
+                <a itemprop="menu" role="button" href="http://beerstrot.it/menu/">Scopri le Delizie &rarr;</a>
+            </div>
+        </div>
     </div>
-<!-- fine navigazione -->
+    <div class="panel-home-2n">
+        <div class="row">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+                <h1>Eventi</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <p>A Beerstrot facciamo un sacco di eventi:</p>
+                <ul class="no-margin-list-bullet">
+                    <li>Abbinamenti di cibi e birre</li>
+                    <li>Concerti con volume non assordante</li>
+                    <li>Spettacoli circensi</li>
+                    <li>Burlesque</li>
+                    <li>E tanto altro&hellip;</li>
+                </ul>
+                <a role="button" href="http://beerstrot.it/eventi/">Scopri i Prossimi Eventi &rarr;</a>
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-n">
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <h1>Chi siamo</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Logo Completo" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+                <p>Tutto, ma proprio tutto, su di noi. Chi siamo, la nostra storia.</p>
+                <p>Immagini e video dell'esperienza che vivi.</p>
+                <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
+                <a role="button" href="http://beerstrot.it/chi-siamo/">Scopri Chi Siamo &rarr;</a>
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-2n">
+        <div class="row">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+                <h1>Contatti</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
+                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/medium/birreria-panorama.jpg" alt="Birreria Panorama" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 large-6 columns">
+                <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
+                <p>Sei un blogger o un giornalista? Compila il form e ricevi tutte le informazioni necessarie per scrivere su di noi.</p>
+                <a role="button" href="http://beerstrot.it/contatti/">Contattaci &rarr;</a>
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-n">
+        <div class="row">
+            <div class="medium-12 large-12 columns">
+                <h1>Blog</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/blog/"><img src="http://beerstrot.it/asset/img/medium/birre-in-love.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+                <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
+                <a role="button" href="http://beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
+            </div>
+        </div>
+    </div>
 <!-- inizio footer -->
-    <footer class="panel-prefooter extra-space-footer">
+    <footer class="panel-prefooter">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
@@ -89,7 +171,6 @@
             </div>
             <div class="large-6 medium-6 columns exta-space">
                 <h4 class="subheader exta-space">Iscriviti alla newsletter</h4>
-
                 <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
                     <div class="row collapse">
                         <div class="small-8 columns">
@@ -165,7 +246,7 @@
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
                 <ul class="block-grid-cards-3">
-                    <li>
+                                        <li>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170 106.2" style="max-width: 80px"  enable-background="new 0 0 170 106.2"><g><path class="img-cards" fill="#3A58A8" d="M169.9 100.5c0 3.1-2.6 5.7-5.7 5.7H5.7c-3.1 0-5.7-2.6-5.7-5.7V5.7C0 2.6 2.6 0 5.7 0h158.6c3.1 0 5.7 2.6 5.7 5.7v94.8h-.1z"/><g fill="#fff"><path d="M78.2 69.1h-8.3l5.2-32h8.3zM62.9 37.1l-7.9 22-.9-4.7L51.2 40s-.3-2.8-3.9-2.8H34.2l-.2.5s4.1.8 8.7 3.7L50 69.1h8.7l13.1-32h-8.9zM128.2 69.1h7.6l-6.6-31.8h-6.6c-3.1 0-3.8 2.4-3.8 2.4l-12.3 29.4h8.7l1.8-4.7h10.6l.6 4.7zm-9.1-11.4l4.3-11.9 2.4 11.9h-6.7zM106.9 44.8l1.2-6.9s-3.7-1.3-7.5-1.3c-4.1 0-14 1.8-14 10.6 0 8.3 11.5 8.4 11.5 12.6 0 4.3-10.3 3.5-13.7.8l-1.2 7.2s3.7 1.8 9.3 1.8c5.7 0 14.2-3 14.2-11 0-8.3-11.6-9.1-11.6-12.6.3-3.6 8.3-3.1 11.8-1.2z"/></g><path fill="#FAA634" d="M54 54.3L51.2 40s-.3-2.8-3.9-2.8H34.1l-.1.5s6.2 1.3 12.3 6.2c5.9 4.6 7.7 10.4 7.7 10.4z"/></g></svg>
                     </li>
                     <li>
