--- a/chi-siamo/team/giulia-mazza.html
+++ b/chi-siamo/team/giulia-mazza.html
@@ -43,7 +43,7 @@
 <!-- inizio header -->
     <header>
         <div id="image-background-team">
-            <img class="image-hero" src="http://beerstrot.it/asset/img/large/tapas.jpg" alt="birre stupende" />
+            <img class="image-hero" src="http://beerstrot.it/asset/img/large/giulia-mazzza-background.jpg" alt="Sfondo" />
              <img class="user-image" src="http://beerstrot.it/asset/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Maza">
         </div>
         <div class="row">
