--- a/chi-siamo/team/giulia-mazza.html
+++ b/chi-siamo/team/giulia-mazza.html
@@ -51,7 +51,7 @@
                 <h1>Giulia Mazza</h1>
                 <p class="by-line">Fondatrice di Beerstrot e blogger in charge</p>
                 <blockquote>
-                    <p>Scrivo di birra e mi piace berla di brutto. ma solo birra artigianale. <br>Tutte le foto sono fatte con un iphone 4s e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
+                    <p>Giulia ha trascorso gli ultimi 7 anni a New York occupandosi della gestione dei bar di Piada: dal cappuccino, il migliore di NY, al vino, esclusivamente italiano. Ha sviluppato la qualità dell’accoglienza puntando sull’idea di base che un bar non serve clienti ma ospita persone.Appassionata di vino ha frequentato numerosi corsi di degustazione sviluppando conoscenze nella creazione di menù e negli abbinamenti fra il bere e il cibo.
                     <cite>Giulia</cite>
                     </p>
                 </blockquote>
