add home background

--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <ul id="team-tab" class="small-block-grid-2 medium-block-grid-3 large-block-grid-3">
+                <ul id="team-tab" class="small-block-grid-2 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home">
                     <li>
                         <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">
                             <img src="http://beerstrot.it/asset/img/thumbs/giulia-mazza-th.jpg" alt="Giulia Mazza">
@@ -99,17 +99,18 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-               <ul class="clearing-thumbs small-block-grid-3 medium-block-grid-3 large-block-grid-3" data-clearing>
-                    <li>
-                        <a href="http://beerstrot.it/asset/img/large/aia-beerstrot.jpg" class="th">
-                            <img data-caption="Aia e rosmarino" src="http://beerstrot.it/asset/img/thumbs/aia-beerstrot-th.jpg" alt="Aia e rosmarino">
-                        </a>
-                    </li>
+               <ul class="clearing-thumbs small-block-grid-3 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home" data-clearing>
                     <li>
                         <a href="http://beerstrot.it/asset/img/large/vialetto-e-erba.jpg" class="th">
                             <img data-caption="Vialetto d'ingresso"  src="http://beerstrot.it/asset/img/thumbs/vialetto-e-erba-th.jpg" alt="Vialetto Entrata e Erba">
                         </a>
                     </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/aia-beerstrot.jpg" class="th">
+                            <img data-caption="Aia e rosmarino" src="http://beerstrot.it/asset/img/thumbs/aia-beerstrot-th.jpg" alt="Aia e rosmarino">
+                        </a>
+                    </li>
+                    
                     <li>
                         <a href="http://beerstrot.it/asset/img/large/quattro-birre-artigianali-americane.jpg" class="th">
                             <img data-caption="Tavola dettaglio" src="http://beerstrot.it/asset/img/thumbs/quattro-birre-artigianali-americane-th.jpg" alt="Tavola Dettaglio">
