--- a/chi-siamo/team/andrea-tagliazucchi.html
+++ b/chi-siamo/team/andrea-tagliazucchi.html
@@ -51,7 +51,8 @@
                 <h1>Andrea Tagliazucchi</h1>
                 <p class="by-line">Fondatore di Beerstrot e barista in charge</p>
                 <blockquote>
-                    <p>Scrivo di birra e mi piace berla di brutto, ma solo birra artigianale. <br> Tutte le foto sono fatte con un iphone e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
+                    <p>Scrivo di birra e mi piace berla di brutto, ma solo birra artigianale.</p>
+                    <p>Tutte le foto sono fatte con un iphone e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
                     <cite>Andrea</cite>
                     </p>
                 </blockquote>
