--- a/index-wide.html
+++ b/index-wide.html
@@ -42,7 +42,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio header -->
-    <header class="panel-home">
+    <header class="homepage-hero">
         <div class="row" itemscope itemtype="http://schema.org/Restaurant">
             <div class="medium-6 large-6 columns" >
                 <h1 class="text-center" itemprop="description">Per chi, come noi, ama la birra artigianale e il buon cibo</h1>
