--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="copyright" content="Beerstrot Copyright (c) 2015"/>
     <meta name="p:domain_verify" content="ca68ebe696c4699798a5a243ca187b2d"/>
     <link rel="canonical" href="http://beerstrot.it"/>
-    <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -42,19 +42,16 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio header -->
-    <header class="panel-home">
-        <div class="row" itemscope itemtype="http://schema.org/Restaurant">
-            <div class="medium-6 large-6 columns" >
-                <h1 class="text-center" itemprop="description">Per chi, come noi, ama la birra artigianale e il buon cibo</h1>
+    <header class="homepage-hero" itemscope itemtype="http://schema.org/Restaurant">
+        <div class="row">
+            <div class="small-12 columns">
+                <h1 class="text-highlight" itemprop="description">Per chi, come noi,<br>ama la birra artigianale<br>e il buon cibo</h1>
             </div>
-            <div class="small-centerd small-12  medium-6 large-6 columns">
-                <img src="http://beerstrot.it/asset/img/medium/birreria.jpg" alt="Birreria">
-            </div>  
         </div>
-        <div class="row show-for-small-only extra-space">
-            <div class="small-12 columns clearfix">
-                <a role="button" href="tel:+393385071940" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
-                <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Indirizzo</a>
+        <div class="row">
+            <div class="small-12 columns show-for-small-only extra-space clearfix">
+                        <a role="button" href="tel:+393385071940" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
+                        <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Indirizzo</a>
             </div>
         </div>
     </header>
