--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header class="homepage-hero" itemscope itemtype="http://schema.org/Restaurant">
         <div class="row">
             <div class="small-12 columns">
-                <h1 class="text-highlight" itemprop="description">Per chi&thinsp;&ndash;&thinsp;come noi&thinsp;&ndash;&thinsp;<br>ama la birra artigianale<br>e il buon cibo</h1>
+                <h1 class="text-highlight" itemprop="description">Per chi<br class="show-for-small">&thinsp;&ndash;come noi&ndash;&thinsp;<br>ama la birra artigianale<br>e il buon cibo</h1>
             </div>
         </div>
         <div class="row">
