--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -137,13 +137,18 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria.jpg" class="th">
-                            <img data-caption="Birreria"  src="http://beerstrot.it/asset/img/thumbs/birreria-th.jpg" alt="">
+                        <a href="http://beerstrot.it/asset/img/large/bancone-e-sedie-dettaglio.jpg" class="th">
+                            <img data-caption="Bancone e sgabelli"  src="http://beerstrot.it/asset/img/thumbs/bancone-e-sedie-dettaglio-th.jpg" alt="Bancone e Sgabelli">
                         </a>
                     </li>
                     <li>
-                        <a href="http://beerstrot.it/asset/img/large/birreria.jpg" class="th">
-                            <img data-caption="Birreria"  src="http://beerstrot.it/asset/img/thumbs/birreria-th.jpg" alt="">
+                        <a href="http://beerstrot.it/asset/img/large/rosmarino.jpg" class="th">
+                            <img data-caption="Aia e Birreria"  src="http://beerstrot.it/asset/img/thumbs/rosmarino-th.jpg" alt="Aia e Birreria">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/panorama-colline-beerstrot.jpg" class="th">
+                            <img data-caption="Un panorama mozzafiato"  src="http://beerstrot.it/asset/img/thumbs/panorama-colline-beerstrot-th.jpg" alt="Colline a Ca' Vecchia Beerstrot">
                         </a>
                     </li>
                 </ul> 
