--- a/menu/index.html
+++ b/menu/index.html
@@ -83,22 +83,22 @@
                                 <h3><a href="http://beerstrot.it/menu/cibo/frittelle-di-capperi.html">Frittelle di capperi<span class="right">3,5</span></a></h3>    
                                 <p>Capperi in fragrante tempura</p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/asparagi-e-prosciutto.html">Asparagi e prosciutto<span class="right">4</span></a></h3>    
                                 <p>Asparagi in sfoglia con prosciutto crudo</p>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/fritto-misto.html">Fritto Beerstrot<span class="right">5</span></a></h3>    
                                 <p>Fritto misto di verdure e formaggi</p>
                             </li> -->
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Salumi<span class="right">9</span></a></h3>    
-                                <p>Prosciutto, Lonza, Ciauscolo, Salame, Coppa</p>
+                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Salumi e formaggi<span class="right">9</span></a></h3>    
+                                <p>Prosciutto, Lonza, Ciauscolo, Salame, e formaggi vari</p>
                             </li>
-                            <li>
+                            <!--   <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/formaggi.html">Formaggi<span class="right">9</span></a></h3>    
                                 <p>Formaggi di vacca e pecora, freschi e stagionati</p>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -154,18 +154,18 @@
                                 <h3><a href="http://beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,75</span></a></h3> 
                                 <p>180 grammi di manzo, pancetta, gorgonzola, pomodorini confit</p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/estivo.html">Estivo<span class="right">8</span></a></h3> 
                                 <p>180 grammi di manzo, melanzane, pomodori, formaggio di capra, rucola</p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/lamburger.html">Lamb<span class="right">8,75</span></a></h3>    
                                 <p>180 grammi di agnello, fondo scuro, germogli di spinaci, salsa allo yogurt</p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/nordico.html">Nordico<span class="right">11,5</span></a></h3>    
                                 <p>180 grammi di salmone, doppia panna, aneto, limone, rucola</p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/ceci.html">Cecilia<span class="right">7,5</span></a></h3>    
                                 <p>180 grammi di ceci, composta leggermente piccante di verdure e menta, rucola</p>
@@ -208,10 +208,10 @@
                                 <h3><a href="http://beerstrot.it/menu/cibo/fagiolini-al-rosmarino.html">Fagioli cannellini<span class="right">2,5</span></a></h3>    
                                 <p>Fagioli cannellini saltati al rosmarino</p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/verdure-grigliate.html">Verdure grigliate<span class="right">3,5</span></a></h3>    
                                 <p>Verdure grigliate di stagione</p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Verdure fresche<span class="right">3</span></a></h3>    
                                 <p>Verdure fresche di stagione</p>
@@ -233,10 +233,10 @@
                                 <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Cheescake<span class="right">5</span></a></h3>
                                 <p>Cheescake stile New York, con gelatina alla birra IPA.</p>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/verdure-fresche.html">Torta pere e cioccolato<span class="right">4</span></a></h3>
                                 <p>Torta con pere e scaglie di cioccolato fondente</p>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
                             </li>
                             <li>
                                 <h3>Lupulus Hopulus 33cl<span class="right">5,5</span></h3>
-                                <p>Fatta in America da Carlyle Brewing Co. Indian Pale Ale vera senza compromessi. Gradi ABV: 6,2%</p>
+                                <p>Fatta in Belgio.</p>
                             </li>
                             <li>
                                 <h3>Gulden Draak 33cl<span class="right">5,5</span></h3>
