--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -113,7 +113,7 @@
                     
                     <li>
                         <a href="http://beerstrot.it/asset/img/large/quattro-birre-artigianali-americane.jpg" class="th">
-                            <img data-caption="Tavola dettaglio" src="http://beerstrot.it/asset/img/thumbs/quattro-birre-artigianali-americane-th.jpg" alt="Tavola Dettaglio">
+                            <img data-caption="Birre Artigianali" src="http://beerstrot.it/asset/img/thumbs/quattro-birre-artigianali-americane-th.jpg" alt="Scaffalatura Dettaglio Birre Artigianali">
                         </a>
                     </li>
                     <li>
@@ -149,6 +149,16 @@
                     <li>
                         <a href="http://beerstrot.it/asset/img/large/panorama-colline-beerstrot.jpg" class="th">
                             <img data-caption="Un panorama mozzafiato"  src="http://beerstrot.it/asset/img/thumbs/panorama-colline-beerstrot-th.jpg" alt="Colline a Ca' Vecchia Beerstrot">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/aia-e-fiori.jpg" class="th">
+                            <img data-caption="Ingresso a Ca' Vecchia Beerstrot"  src="http://beerstrot.it/asset/img/thumbs/aia-e-fiori-th.jpg" alt="Aias e Fiori">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://beerstrot.it/asset/img/large/insegna-beerstrot-con-cielo.jpg" class="th">
+                            <img data-caption="Insegna d'ingresso a Ca' Vecchia Beerstrot"  src="http://beerstrot.it/asset/img/thumbs/insegna-beerstrot-con-cielo-th.jpg" alt="Insegna Ca' Vecchia Beerstrot">
                         </a>
                     </li>
                 </ul> 
