--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/medium/birreria-panorama.jpg" alt="Birreria Panorama" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/medium/contatti.jpg" alt="Insegna Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
