--- a/menu/index.html
+++ b/menu/index.html
@@ -353,20 +353,12 @@
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Franciacorta Satèn<span class="right"> 6 | 25</span></a></h3>
-                                <p>Il Mosnel</p>
+                                <h3>Franciacorta Brut<span class="right"> 6,5 | 26</span></a></h3>
+                                <p>La Fiorita</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Passerina Brut<span class="right"> 5 | 3</span></a></h3>
-                                <p>Velenosi</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
-                                <p>Birrificio xxxx. Rossa</p>
-                            </li>
-                            <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Spumante Brut<span class="right"> 4 | 14</span></a></h3>
+                                <p>Conti di Buscareto</p>
                             </li>
                         </ul>
                     </div>
@@ -378,20 +370,20 @@
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Bianco della Casa<span class="right"> 1/4 3 | lt. 12</span></a></h3>
-                                <p>Il Mosnel</p>
+                                <h3>Gewürztraminer<span class="right"> 5,5 | 22</span></a></h3>
+                                <p>Roberta Fugatti</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Passerina Secco<span class="right"> 5 | 18</span></a></h3>
-                                <p>Velenosi</p>
+                                <h3>Pecorino Offida<span class="right"> 3,5 | 13</span></a></h3>
+                                <p>Tenuta Seghetti Panichi</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
-                                <p>Birrificio xxxx. Rossa</p>
+                                <h3>Verdicchio Castelli di Jesi<span class="right"> 3 | 10</span></a></h3>
+                                <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Verdicchio di Matelica<span class="right"> 5 | 19</span></a></h3>
+                                <p>Bisci</p>
                             </li>
                         </ul>
                     </div>
@@ -403,20 +395,24 @@
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Rosso della Casa<span class="right"> 1/4 3 | lt. 12</span></a></h3>
-                                <p>Il Mosnel</p>
+                                <h3>Crimà<span class="right"> 3,5 | 11</span></a></h3>
+                                <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Passerina Secco<span class="right"> 5 | 18</span></a></h3>
-                                <p>Velenosi</p>
+                                <h3>Lacrima<span class="right"> 3,5 | 12</span></a></h3>
+                                <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
-                                <p>Birrificio xxxx. Rossa</p>
+                                <h3>Lacrima di Morro d'Alba<span class="right"> 3,5 | 12</span></a></h3>
+                                <p>Malaserena</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 6 | 3.5</span></a></h3>
-                                <p>poi ve lo diremo ma qualcosa di molto definito nel gusto</p>
+                                <h3>Rosso IGT<span class="right"> 4 | 15</span></a></h3>
+                                <p>Conti di Buscareto</p>
+                            </li>
+                            <li>
+                                <h3>Valpolicella<span class="right"> 5 | 19</span></a></h3>
+                                <p>Fralibri</p>
                             </li>
                         </ul>
                     </div>
@@ -432,20 +428,20 @@
                         <h2 class="subheader">Alcolici</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">Cuba libre<span class="right">6</span></a></h3>
-                                <p>Scelta di Capeza 30 anos, Bacardi</p>
+                                <h3>Spritz<span class="right">4,5</span></a></h3>
+                                <p>Campari o Aperol</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Gin Tonic<span class="right"> 5 | 3</span></a></h3>
-                                <p>Scelta di Gin de Mar, Hendrick</p>
+                                <h3>Cuba libre<span class="right">6</span></a></h3>
+                                <p>Bacardi Rhum</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
-                                <p>Birrificio xxxx. Rossa</p>
+                                <h3>Gin Tonic<span class="right">5</span></a></h3>
+                                <p>Tanquerey</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/xxxxx.html">Ci stiam pensando<span class="right"> 5 | 3</span></a></h3>
-                                <p>Birrificio xxxx. Rossa</p>
+                                <h3>Gin Tonic<span class="right">8</span></a></h3>
+                                <p>Gin de Mare o Hendrick's</p>
                             </li>
                         </ul>
                     </div>
