--- a/menu/index.html
+++ b/menu/index.html
@@ -422,10 +422,10 @@
 <!-- vino fine -->
 <!-- drink -->
         <section class="content" role="tabpanel" aria-hidden="true" id="drinks">
-            <div class="panel-menu-n">
+            <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 columns">
-                        <h2 class="subheader">Alcolici</h2>
+                        <h2 class="subheader">Drinks</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Spritz<span class="right">4,5</span></a></h3>
@@ -441,6 +441,31 @@
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">8</span></a></h3>
+                                <p>Gin de Mare o Hendrick's</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns">
+                        <h2 class="subheader">Liquori</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Varnelli<span class="right">2</span></a></h3>
+                                <p></p>
+                            </li>
+                            <li>
+                                <h3>Grappa Stravecchia<span class="right">3</span></a></h3>
+                                <p>18 Lune Marzadro</p>
+                            </li>
+                            <li>
+                                <h3>Rhum<span class="right">6</span></a></h3>
+                                <p>Matusalem</p>
+                            </li>
+                            <li>
+                                <h3>Gin Tonic<span class="right">3</span></a></h3>
                                 <p>Gin de Mare o Hendrick's</p>
                             </li>
                         </ul>
