--- a/menu/index.html
+++ b/menu/index.html
@@ -350,6 +350,23 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 columns small-12">
+                        <h2 class="subheader">Vino della casa</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Rosso Conero<span class="right"> 2,5 | 6</span></a></h3>
+                                <p>Rosso</p>
+                            </li>
+                            <li>
+                                <h3>Verdicchio Castelli di Jesi<span class="right"> 2,5 | 6</span></a></h3>
+                                <p>Bianco</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 columns small-12">
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
@@ -396,6 +413,35 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Crimà<span class="right"> 3,5 | 11</span></a></h3>
+                                <p>Conti di Buscareto</p>
+                            </li>
+                            <li>
+                                <h3>Lacrima<span class="right"> 3,5 | 12</span></a></h3>
+                                <p>Conti di Buscareto</p>
+                            </li>
+                            <li>
+                                <h3>Lacrima di Morro d'Alba<span class="right"> 3,5 | 12</span></a></h3>
+                                <p>Malaserena</p>
+                            </li>
+                            <li>
+                                <h3>Rosso IGT<span class="right"> 4 | 15</span></a></h3>
+                                <p>Conti di Buscareto</p>
+                            </li>
+                            <li>
+                                <h3>Passito di Verdicchio<span class="right">30</span></a></h3>
+                                <p>Col di Corte 50cl</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-menu-n">
+                <div class="row">
+                    <div class="large-12 medium-12 small-12 columns">
+                        <h2 class="subheader">Passiti</h2>
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Nero<span class="right"> 14</span></a></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                             <li>
