change image chi siamo

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/svgs/logo-completo.svg" alt="Logo Completo" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/chi-siamo/"><img src="http://beerstrot.it/asset/img/medium/bancone-e-sedie-dettaglio.jpg" alt="Bancone Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Tutto, ma proprio tutto, su di noi. Chi siamo, la nostra storia.</p>
