--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://beerstrot.it/eventi/"><img src="http://beerstrot.it/asset/img/medium/eventi.jpg" alt="Eventi" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>A Beerstrot facciamo un sacco di eventi:</p>
