--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -197,12 +197,27 @@
                     <script src="http://www.jscache.com/wejs?wtype=cdswritereviewlg&amp;uniq=95&amp;locationId=2373449&amp;lang=it&amp;border=false&amp;display_version=2"></script>
                     <a class="close-reveal-modal">&#215;</a>
                 </div>
-                <article class="row">  
+                <article class="row">
                     <div class="medium-12 large-12 columns">
-                        <h4><em>Ti stiamo aspettando!</em></h4>
-                        <h6 class="by-line">Scritto il 25 Aprile 2015</h6>  
-                        <blockquote cite="">Abbiamo appena aperto, è normale non ci siano recensioni. Vuoi essere il primo?<cite>Andrea</cite></blockquote>
+                        <h4><em>“Ottima cucina americana</em></h4>
+                        <h6 class="by-line">Scritto il 10 Maggio 2015</h6>  
+                        <blockquote cite="">Siamo arrivati al ca' vecchia beerstroat su consiglio di amici. Il casolare è stato ristrutturato osando coi colori... Blu elettrico nella sala principale... Insolito per un posto così. Gli hamburger sono molto buoni e cotti alla perfezione.... Le patatine che erano accompagnate al piatto erano un po' troppo salate. Le costine in salsa BBQ sono come burro. La birra è solo artigianale... Quindi non troverete la classica pils alla spina. I lavori all'esterno non sono ancora terminati, ma in estate quando tutto sarà completato verrà fuori sicuramente una bella location. Torneremo tra qualche mese.<cite>Lorenzo P</cite></blockquote>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space">
+                        <h4><em>“Ottima cucina americana!</em></h4>
+                        <h6 class="by-line">Scritto il 7 Maggio 2015</h6>  
+                        <blockquote cite="">Locale situato in una posizione incantevole dalla quale si gode di un panorama mozzafiato. Ottimo l'hamburgher Diablo accompagnato da una delle tante birre artigianali americane. Da segnalare anche il tiramisù alla birra stout. Porzioni a dir poco abbondanti. Il tutto accompagnato dalla cortesia e gentilezza del personale ed in particolare dei titolari, i quali, grazie alla loro lunga esperienza in America, sanno dare ottimi consigli al cliente.<cite>Paolo G</cite></blockquote>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space">
+                        <h4><em>Meraviglia e Novita allo stato puro</em></h4>
+                        <h6 class="by-line">Scritto il 6 Maggio 2015</h6>  
+                        <blockquote cite="">Volete la magia di un luogo incantato e ragnato dalla pace ma con la goliardia di persone capaci di unire birre artigianali a cibi completamente estrosi, ottimi e sopratutto con sentore newyorchese. ..beh andateci....provare x credere....e magari ne assaggerete delle belle.<cite>Micaela T</cite></blockquote>
                     </div> 
+                    <div class="medium-12 large-12 columns extra-space">
+                        <h4><em>Paesaggio e leccornie</em></h4>
+                        <h6 class="by-line">Scritto il 3 Maggio 2015</h6>  
+                        <blockquote cite="">La vista più bella delle Marche, prendi il sole di giorno, ammiri il cielo stellato di notte. Una villa sulla collina meravigliosa e, a sorpresa, nessuna pietanza pretenziosa o personale ingessato, ma ragazzi alla mano e i migliori hamburger ali di pollo costine cheesecake e birre artigianali. Ingredienti di grande qualità e inventiva del cuoco.<cite>rmniccolo</cite></blockquote>
+                    </div>
                 </article>
             </div>    
             <div class="medium-6 large-6 columns">
